Changed status bar to black, widened dial
git-svn-id: https://tedometer.googlecode.com/svn/trunk@28 0de56964-b9b4-11de-a079-5d186ce21964

--- a/Tedometer/Ted-O-Meter-Info.plist
+++ b/Tedometer/Ted-O-Meter-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>TED-O-Meter</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
@@ -28,5 +28,7 @@
 	<true/>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleBlackOpaque</string>
 </dict>
 </plist>
