--- a/Tedometer/Ted-O-Meter-Info.plist
+++ b/Tedometer/Ted-O-Meter-Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>UIPrerenderedIcon</key>
 	<true/>
+	<key>SBUsesNetwork</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDisplayName</key>
