--- a/Tedometer/Ted-O-Meter-Info.plist
+++ b/Tedometer/Ted-O-Meter-Info.plist
@@ -32,5 +32,7 @@
 	<string>MainWindow</string>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleBlackOpaque</string>
+	<key>L0SolicitReviewAppStoreURL</key>
+	<string>http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewContentsUserReviews?id=336208628&amp;pageNumber=0&amp;sortOrdering=1&amp;type=Purple+Software&amp;mt=8</string>
 </dict>
 </plist>
