Removing .DS_Store file

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ UserInterfaceState.xcuserstate
 Breakpoints_v2.xcbkptlist
 
 /Tedometer/Ted-O-Meter.xcodeproj/project.xcworkspace/xcuserdata/nathan.xcuserdatad/UserInterfaceState.xcuserstate
+
+/Tedometer/Resources/Data/.DS_Store
